# wiki-search

./: .gitignore  Cargo.toml
.cargo/: config.toml
patches/zim-sys/: zim-bind.cc  zim-bind.h
patches/zim-sys/src/: binding.rs
src/: main.rs  test  zim.rs
