[package]
name = "wiki-search"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
dashmap = "6.1.0"
lasso = { version = "0.7.3", features = ["multi-threaded", "serialize"] }
ordered-float = "5.1.0"
rand = "0.9.2"
rayon = "1.11.0"
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
zim-rs = "0.1.1"
zim-sys = "0.1.0"

[patch.crates-io]
zim-sys = { path = "patches/zim-sys" }
